<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/Gray"
    tools:context=".activities.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/header"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:background="@color/Gray_Cloud"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/Start_fatigue_scr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/subs_heading"
            android:textSize="20dp"
            android:textColor="@color/Black" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:background="@color/White">
            <TextView
                android:id="@+id/subs_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/subs_text"
                android:textColor="@color/Black" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Administrator"
                android:textColor="@color/Black"
               />
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp">
            <TextView
                android:id="@+id/admin_email_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Email"
                android:gravity="center"
                android:textColor="@color/Black"
                android:layout_weight="1"
                android:linksClickable="true"

                />
            <EditText
                android:id="@+id/admin_email_txt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:gravity="center"
                android:layout_weight="0.5"
                android:hint="Email"
                android:textColor="@color/Smokey_Gray"
                android:linksClickable="true"
                android:paddingBottom="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp">
            <TextView
                android:id="@+id/admin_pwd_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Password"
                android:gravity="center"
                android:textColor="@color/Black"
                android:layout_weight="1"
                android:linksClickable="true"

                />
            <EditText
                android:id="@+id/admin_pwd_txt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:gravity="center"
                android:layout_weight="0.5"
                android:hint="Password"
                android:textColor="@color/Smokey_Gray"
                android:linksClickable="true"
                android:paddingBottom="10dp"
                />
        </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp">
            <TextView
                android:id="@+id/check_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="Check Administrator"
                android:textColor="@color/Dodger_Blue" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Exists or Not?"
                android:gravity="center"
                android:textColor="@color/Black"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Organisation"
                android:textColor="@color/Black"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/User_Subscription"
                android:textColor="@color/Black"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>