<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/Gray_Cloud">

    <LinearLayout
        android:id="@+id/date_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.ibt.nirmal.fpproandroid_source.DateTimeWheel.DateWheel.LoopView
            android:id="@+id/picker_day"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:layout_weight="1" />

        <com.ibt.nirmal.fpproandroid_source.DateTimeWheel.DateWheel.LoopView
            android:id="@+id/picker_month"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:layout_weight="1" />

        <com.ibt.nirmal.fpproandroid_source.DateTimeWheel.DateWheel.LoopView
            android:id="@+id/picker_year"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:layout_weight="1" />

    </LinearLayout>
    <LinearLayout
            android:id="@+id/period_info"
            android:layout_below="@+id/date_period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Select_date_period"
            android:textColor="@color/Black"
            android:gravity="center"
            android:textSize="25dp"/>
        <TextView
            android:id="@+id/period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="8"
            android:textColor="@color/Black"
            android:textSize="25dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/decreasePeriod"
                android:text="-"
                android:tag=""
                android:onClick="onClick"
                android:gravity="center"
                android:textColor="@color/Dodger_Blue"
                android:layout_weight="1"
                android:textSize="20dp"
                android:background="@drawable/blue_border_outline"/>
            <TextView
                android:id="@+id/increasePeriod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:tag=""
                android:onClick="onClick"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="@color/Dodger_Blue"
                android:background="@drawable/blue_border_outline"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/last_date_period"
        android:layout_below="@+id/period_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Last_Period"
            android:textColor="@color/Medium_Orchid"
            android:gravity="center"
            android:textSize="20dp"/>
        <TextView
            android:id="@+id/periodDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Tuesday,11 september 2018"
            android:textColor="@color/Medium_Orchid"
            android:textSize="20dp"/>
    </LinearLayout>
    <ScrollView
        android:layout_above = "@+id/display_footer"
        android:layout_below="@+id/last_date_period"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <LinearLayout
        android:id="@+id/ifls_display"
        android:layout_below="@+id/last_date_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/IFLS_display_options"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lables_dates"
        android:layout_below="@+id/ifls_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Lables_with_dates"
            android:textColor="@color/Black"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20dp"/>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="16dp"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/row_per_day"
        android:layout_below="@+id/lables_dates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/row_per_day"
            android:textColor="@color/Black"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20dp"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="center" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/color_code"
        android:layout_below="@+id/row_per_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/IFLS_color_range"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20dp"/>
    </LinearLayout>
            <LinearLayout
            android:id="@+id/color_range"
            android:layout_below="@+id/color_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <LinearLayout
        android:layout_below="@+id/color_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yellow_range"
            android:textColor="@color/Yellow"
            android:gravity="center"
            android:textSize="20dp"/>
        <TextView
            android:id="@+id/yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="1.0"
            android:textColor="@color/Yellow"
            android:textSize="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/yellow_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:tag="decrease"
            android:onClick="onClick"
            android:text="-"
            android:layout_gravity="center"
            android:textColor="@color/Dodger_Blue"
            android:layout_weight="1"
            android:textSize="20dp"
            android:background="@drawable/blue_border_outline"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:tag="increase"
            android:onClick="onClick"
            android:text="+"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:textColor="@color/Dodger_Blue"
            android:background="@drawable/blue_border_outline"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
    <LinearLayout
        android:layout_below="@+id/yellow_range"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orange_range"
                android:textColor="@color/Dark_Orange"
                android:gravity="center"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="1.0"
                android:textColor="@color/Dark_Orange"
                android:textSize="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/orange_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:tag="decrease"
                android:onClick="onClick"
                android:text="-"
                android:layout_gravity="center"
                android:textColor="@color/Dodger_Blue"
                android:layout_weight="1"
                android:textSize="20dp"
                android:background="@drawable/blue_border_outline"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:tag="increase"
                android:onClick="onClick"
                android:text="+"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:textColor="@color/Dodger_Blue"
                android:background="@drawable/blue_border_outline"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/orange_range"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red_range"
                android:textColor="@color/Red"
                android:gravity="center"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="1.0"
                android:textColor="@color/Red"
                android:textSize="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/red_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:tag="decrease"
                android:onClick="onClick"
                android:text="-"
                android:layout_gravity="center"
                android:textColor="@color/Dodger_Blue"
                android:layout_weight="1"
                android:textSize="20dp"
                android:background="@drawable/blue_border_outline"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:tag="increase"
                android:onClick="onClick"
                android:text="+"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:textColor="@color/Dodger_Blue"
                android:background="@drawable/blue_border_outline"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/display_footer"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/White"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="Cancel"
            android:textColor="@color/Dodger_Blue"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/save_rest"
            android:textColor="@color/Dodger_Blue"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="Save"
            android:textColor="@color/Dodger_Blue"/>
    </LinearLayout>

</RelativeLayout>