<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/Gray"
    tools:context=".activities.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/header"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:background="@color/Gray_Cloud"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/Start_fatigue_scr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/Stone_Productions"
            android:textSize="20dp"
            android:textColor="@color/Black" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="User"
            android:textSize="20dp"
            android:textColor="@color/Black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/admin_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/border"
                android:textAlignment="center"
                android:hint="Admin or User Code"
                android:ems="10" />

            <TextView
                android:id="@+id/admin_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:layout_marginLeft="16dp"
                android:text="Apply"
                android:textColor="@color/Dodger_Blue"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"

            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/user_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/Enter_user_code"
                android:textColor="@color/Black"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/date_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/Select_date"
                android:textColor="@color/Black"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.ibt.nirmal.fpproandroid_source.DateTimeWheel.DateWheel.LoopView
                android:id="@+id/picker_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.ibt.nirmal.fpproandroid_source.DateTimeWheel.DateWheel.LoopView
                android:id="@+id/picker_month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.ibt.nirmal.fpproandroid_source.DateTimeWheel.DateWheel.LoopView
                android:id="@+id/picker_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>
       <!-- <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:gravity="center">
            <TextView
                android:id="@+id/remember_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="Remember Login"
                android:textColor="@color/Black"
                />
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>-->
        <TextView
            android:id="@+id/loginscrn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/update_text"
            android:textColor="@color/Dodger_Blue"
            />
    </LinearLayout>
</LinearLayout>